--- a/app/views/layouts/dashboard.html.slim
+++ b/app/views/layouts/dashboard.html.slim
@@ -11,4 +11,10 @@ html
     = stylesheet_link_tag "tailwind", "inter-font", "data-turbo-track": "reload"
     = javascript_include_tag "application", "data-turbo-track": "reload", defer: true
   body
-    = yield
+    - if notice
+      .alert.alert-success
+        = notice
+    - if alert
+      .alert.alert-danger
+        = alert
+    == yield
